--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Mission Statement</string>
+    <string name="permission_rationale">Location permission is needed for core functionality. Please Enable it</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality. Enable it manually</string>
+    <string name="settings">Settings</string>
+
 </resources>
