--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="permission_rationale">Location permission is needed for core functionality. Please Enable it</string>
     <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality. Enable it manually</string>
     <string name="settings">Settings</string>
+    <string name="vpclose">Close</string>
+    <string name="vpnext">Next</string>
+
 
 </resources>
